[gd_scene load_steps=6 format=3 uid="uid://3mie7hp7sxd"]

[ext_resource type="Script" path="res://scripts/game/hitbox_rotation.gd" id="1_xxdfa"]
[ext_resource type="Texture2D" uid="uid://dia8i6qamr8kw" path="res://grfx/icon_Skull32.png" id="2_is6yo"]
[ext_resource type="Texture2D" uid="uid://bjj4hh6ud74e8" path="res://grfx/icon_north_arrow.png" id="2_s81sm"]
[ext_resource type="Texture2D" uid="uid://bvm1xc8oouurf" path="res://grfx/arrow_rotate_64.png" id="3_33meo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3p1nj"]
radius = 16.0

[node name="hitbox_rotation" type="Area2D" node_paths=PackedStringArray("icon_sprite")]
collision_layer = 128
collision_mask = 0
script = ExtResource("1_xxdfa")
icon_sprite = NodePath("rotation_circle/icon")
icon_tex_north = ExtResource("2_s81sm")
icon_tex_rotate = ExtResource("3_33meo")

[node name="rotation_circle" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3p1nj")

[node name="icon" type="Sprite2D" parent="rotation_circle"]
texture = ExtResource("2_is6yo")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
